# preemptive_app

./: README.md  components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  bbr.sh  install_shadowsocks.sh  tauri.conf.json
src-tauri/.ss_config/: config.json
src-tauri/src/: main.rs
src-tauri/src/manage/: config.rs  manage.rs  mod.rs
src-tauri/src/rpc/: client.rs  instance.rs  mod.rs  security_group.rs  spot_price.rs
src-tauri/src/ssh/: ssh2.rs
src/components/: Drawer.vue  Options.vue  Setup.vue
