[package]
name = "preemptive_app"
version = "0.1.0"
description = "A Tauri App"
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = ["codegen"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["process-command-api", "shell-sidecar"] }
shadowsocks-rust = { version = "1.14.3", optional = true }
clap = "3.1.18"
aliyun-openapi-core-rust-sdk = "0.3.0"
serde_json = "1.0.81"
chrono = "0.4.19"
ssh2 = "0.9.3"
# ctrlc = "3.2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]


# [[bin]]
# name = "al_sslocal"
# path = "bin/al_sslocal.rs"
